CIVET Release Notes
This document describes the high-level changes made to the civet software from
release to release.  It is cumulative, with the most recent changes listed
first.  The most up-to-date version is in the civet git repository

Version 1.9.1
Features
 - added pipeline <description></description> tag
 - added <option> "type", "description", and "display_name" attributes
 - added "description" attribute for <file>, <filelist>, <dir>, <string> tags
 - added "paired" attribute to <filelist>


Version 1.9.0
-------------
Features
 - created new "managed batch" runtime -- see documentation for details.


Version 1.8.5
-------------
Bug Fixes
 - If the default output directory was passed as a parameter and marked as
   input, Civet would still create it if it does not exist. Now Civet correctly
   exits after printing an appropriate error message.

Features
 - create wrapped version of parse_XML() to catch parse errors and exit
   automatically (enhances existing wrapper scripts). Old behavior can be
   found by calling _parse_XML()
 - a file can now be based on a filelist passed as input parameter. In this
   case the first file in the filelist is used as the source for the based_on
   file
 - Enhanced recovery for Torque connection errors (unable to open socket errors)
 - added --write-file-summary option to civet_run
  - added --json options to civet_run and civet_status


Version 1.8.4.3
---------------
Bug Fixes
 - allow () to be used as tool command file delimiters


Version 1.8.4.2
---------------
Bug Fixes
 - revert change that prevented validity.py from working with Python 2.7


Version 1.8.4.1
---------------
Bug Fixes
 - input="true" now implies create="false" for <dir> tag


Version 1.8.4
-------------
Bug Fixes
 - fix AttributeError when referencing undefined file within a tool XML
 - allow use of "PIPELINE_ROOT" within tool XML
 - raise a ParseError if a File ID is defined more than once


Version 1.8.3
-------------
Bug Fixes